--- a/assets/style.css
+++ b/assets/style.css
@@ -1,14 +1,14 @@
 #searchContainer {
-    background-color: red;
+    background-color: rgb(216, 216, 216);
     padding-top: 0%;
 }
 
 #weatherContainer {
-    background-color: blue;
+    background-color: rgb(140, 140, 233);
 }
 
 #forecastContainer {
-    background-color: yellow;
+    background-color: rgb(131, 131, 94);
 }
 
 #cityInput {
@@ -33,4 +33,16 @@
 
 #btn:hover {
     background: #0b7dda;
+}
+
+.city {
+    width: 90%;
+    padding: 5px;
+    height: 5%;
+    text-align: left;
+}
+
+.card {
+    width: 20%;
+    float: right;
 }
